--- a/style.css
+++ b/style.css
@@ -1,11 +1,71 @@
 
 html, body {
   font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #FFFFFF;
+  height: 100%;
+  width: 100%;
+}
+
+.cover {
+  /*background-image: url("https://a.slack-edge.com/4030/img/wired/neutrino-observatory-header-image@2x.jpg");*/
+  background-image: url(https://tctechcrunch2011.files.wordpress.com/2014/02/bitcoin-perfecthue.jpg?fit=1%2C1);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  flex: none;
+  justify-content: space-between;
+}
+
+.central_info {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  flex: none;
+}
+
+.ci_child {
+
+}
+
+.secondary_info {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;;
+}
+
+.si_child {
+
+}
+
+.footer_list, .nav_list {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  list-style-type: none;
+}
+
+
+/*.nav_list {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  list-style-type: none;
+}*/
+
+.footer_list li, .nav_list li {
+  padding: 8px;
+  margin-left: 9px;
 }
 
 
 /*for removing underline from links:
   http://stackoverflow.com/questions/10853881/how-to-remove-underline-from-a-link-in-html*/
 a.no_underline {
-  text-decoration: none
+  text-decoration: none;
+  margin-right: auto;
 }
