--- a/style.css
+++ b/style.css
@@ -9,14 +9,12 @@ html, body {
 }
 
 .cover {
-  /*background-image: url(http://i.imgur.com/guhkuBy.jpg);*/
+  /*background-image: url(https://www.wired.com/wp-content/uploads/blogs/wiredenterprise/wp-content/uploads/2014/01/bitcoin-gold.jpg);*/
   background-image: url(http://i.imgur.com/mNCwAqX.jpg);
   background-size: cover;
+  background-position: center;
   width: 100%;
   height: auto;
-  /*WHY was this causing so much grief: */
-  /*width: 100%;
-  height: 100%;*/
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
@@ -175,7 +173,7 @@ footer {
   display: none;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
 
   #double_border {
     border: 3px solid #FFF;
