--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 .cover {
-  /*background-image: url(https://www.wired.com/wp-content/uploads/blogs/wiredenterprise/wp-content/uploads/2014/01/bitcoin-gold.jpg);*/
+  /*background-image: url(http://i.imgur.com/guhkuBy.jpg);*/
   background-image: url(http://i.imgur.com/mNCwAqX.jpg);
   background-size: cover;
   background-position: center;
@@ -186,6 +186,10 @@ footer {
   padding: 0px;
 }
 
+.dep_opposite {
+  display: none;
+}
+
 /*.menu_screen ul {
   width: inherit;
   padding: inherit;
@@ -205,6 +209,10 @@ footer {
     border-radius: .25rem;
     padding: 12px;
     color: #FFF;
+  }
+
+  .dep_opposite {
+    display: block;
   }
 
   .button_input {
@@ -256,7 +264,7 @@ footer {
     height:100%;
     top:0px;
     left:0px;
-    background-color: #191970;
+    background: #191970 url(http://i.imgur.com/guhkuBy.jpg) center;
     opacity: 1;
     z-index:1000;
   }
@@ -298,6 +306,10 @@ footer {
     color: rgba(255, 255, 255, 0.5);
   }
 
+  #toggle:checked ~ .menu_screen #ms_top #ms_logo:hover {
+    color: rgba(255, 255, 255, 1);
+  }
+
   #toggle:checked ~ .menu_screen #ms_rest {
     display: flex;
     flex-flow: column nowrap;
@@ -307,6 +319,13 @@ footer {
     padding: 10px;
   }
 
+  #toggle:checked ~ .menu_screen #ms_top li:hover {
+    background-color: transparent !important;
+  }
 
+  #toggle:checked ~ .menu_screen #ms_rest li:hover {
+    box-shadow: 10px 10px;
+    background-color: transparent !important;
+  }
 
 }
