--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html, body {
   font-family: 'Lato', sans-serif;
   margin: 0;
@@ -8,8 +7,8 @@ html, body {
   width: 100%;
 }
 
+/* main div enclosing everything in the body */
 .cover {
-  /*background-image: url(http://i.imgur.com/guhkuBy.jpg);*/
   background-image: url(http://i.imgur.com/mNCwAqX.jpg);
   background-size: cover;
   background-position: center;
@@ -20,6 +19,7 @@ html, body {
   justify-content: space-between;
 }
 
+/* information at center of screen, i.e. email and heading etc.*/
 .central_info {
   display: flex;
   flex-flow: column nowrap;
@@ -28,6 +28,7 @@ html, body {
   padding-bottom: 50px;
 }
 
+/* sets of link headings and link 1, 2, 3, ... */
 .secondary_info {
   display: flex;
   flex-flow: row nowrap;
@@ -39,10 +40,12 @@ html, body {
   padding-bottom: 30px;
 }
 
+/* navigation bar */
 .nav_list {
   color: #696969;
 }
 
+/* "si" = secondary_info => hence subsections of secondary info div*/
 .si_child {
   list-style-type: none;
 }
@@ -56,6 +59,7 @@ html, body {
   opacity: 1 !important;
 }
 
+/* footer and nav bar start out as list; some common design*/
 .footer_list, .nav_list {
   display: flex;
   flex-flow: row nowrap;
@@ -65,6 +69,7 @@ html, body {
   padding-right: 20px;
 }
 
+/* components of main cover div do not 'flex'*/
 nav, .central_info, .secondary_info, footer {
   flex: none;
 }
@@ -74,6 +79,7 @@ nav, .central_info, .secondary_info, footer {
   margin-left: 15px;
 }
 
+/* links that shouldn't be underlined */
 .no_underline {
   text-decoration: none;
   margin-right: auto;
@@ -117,6 +123,12 @@ nav, .central_info, .secondary_info, footer {
   justify-content: flex-start;
 }
 
+/* ========================================================================== */
+/* code enclosed below was strongly adapted from slack.com page's source code
+   due to the fact that email address entering tab and "create" button both
+   had simple and repeatable designs. Additionally, approval was gained from
+   Mr. Tim Tregubov
+*/
 #email_input {
   margin-bottom: 0;
   font-size: 1.249rem;
@@ -144,6 +156,8 @@ nav, .central_info, .secondary_info, footer {
   border-radius: .25rem;
   font-family: inherit;
 }
+/* section of code that was strongly adapted from slack.com page ends here    */
+/* ========================================================================== */
 
 .nav_list li:hover {
   background-color: rgba(255, 255, 255, 0.4);
@@ -163,12 +177,12 @@ nav, .central_info, .secondary_info, footer {
   padding: 12px;
 }
 
-
 footer {
   background-color:  #000032;
   padding-right: 100px;
 }
 
+/* needs to take up zero space */
 #toggle {
   position: absolute;
   top: 0;
@@ -178,6 +192,7 @@ footer {
   opacity: 0;
 }
 
+/* pop-up menu visible on clicking "Menu" button in mobile version of page */
 .menu_screen {
   opacity: 0;
   height: 0px;
@@ -194,9 +209,18 @@ footer {
   justify-content: flex-start;
 }
 
+/* opposite of deprecated class (refer below)
+  "deprecate" class attatched to anything that shouldn't be visible in
+   full screen version
+*/
 .dep_opposite {
   display: none;
 }
+
+/* ========================================================================== */
+/*                MOBILE FRIENDLY VERSION OF PAGE
+  obtained at sub-640px screen size
+*/
 
 @media only screen and (max-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
 
@@ -211,6 +235,7 @@ footer {
     color: #FFF;
   }
 
+  /* make visible */
   .dep_opposite {
     display: block;
   }
@@ -231,6 +256,7 @@ footer {
     margin-bottom: 8px;
   }
 
+  /* everything that isn't visible in mobile version: */
   .si_child li:not(.link_heading), .deprecate {
     display: none;
   }
@@ -247,7 +273,13 @@ footer {
     font: inherit;
   }
 
-  /*http://stackoverflow.com/questions/3250790/making-a-div-that-covers-the-entire-page*/
+
+  /* WHEN MENU BUTTON CLICKED: -------                                        */
+
+  /* referred to following link for help in making the pop-up menu cover
+     entire page:
+    http://stackoverflow.com/questions/3250790/making-a-div-that-covers-the-entire-page
+  */
   #toggle:checked ~ .menu_screen {
     width:100%;
     height:100%;
